초기 화면 구성 및 이동 로직 추가

--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Galaga with HTML</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+    
+    .game-container {
+      text-align: center;
+    }
+
+    .title {
+      font-size: 3em;
+      margin-bottom: 50px;
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 100px;
+    }
+
+    .buttons button {
+      width: 200px;
+      padding: 10px;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #333;
+      color: #fff;
+      transition: background-color 0.3s;
+    }
+
+    .buttons button:hover {
+      background-color: #555;
+    }
+  </style>
 </head>
 <body>
-  <h6>Galaga</h6>
+  <div class="game-container">
+    <div class="title">Galaga</div>
+    
+    <div class="buttons">
+      <button onclick="startGame()">Game Start</button>
+      <button onclick="showControls()">Controls</button>
+      <button onclick="showRecord()">Record</button>
+    </div>
+  </div>
+
+  <script>
+    function startGame() {
+      window.location.href = "game1.html";
+    }
+
+    function showControls() {
+      alert("조작법을 확인합니다.");
+    }
+
+    function showRecord() {
+      alert("Record를 확인합니다.");
+    }
+  </script>
 </body>
 </html>
