--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     }
 
     function showControls() {
-      alert("조작법을 확인합니다.");
+      alert("조작법");
     }
 
     function showRecord() {
-      alert("Record를 확인합니다.");
+      alert("Record");
     }
   </script>
 </body>
