--- a/index.html
+++ b/index.html
@@ -47,7 +47,56 @@
     }
 
     .buttons button:hover {
+      background-color: #d6caca;
+    }
+
+    /* 팝업 스타일 */
+    .popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .popup-content {
+      background-color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+      color: #fff;
+      width: 300px;
+    }
+
+    .popup-content h2 {
+      margin-top: 0;
+      font-size: 1.5em;
+    }
+
+    .popup-content p {
+      margin: 10px 0;
+      font-size: 1.1em;
+    }
+
+    .popup-content button {
+      margin-top: 15px;
+      padding: 8px 15px;
+      font-size: 1em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
       background-color: #555;
+      color: #fff;
+      transition: background-color 0.3s;
+    }
+
+    .popup-content button:hover {
+      background-color: #d6caca;
     }
   </style>
 </head>
@@ -62,13 +111,28 @@
     </div>
   </div>
 
+  <!-- 조작법 팝업 -->
+  <div class="popup-overlay" id="controlsPopup">
+    <div class="popup-content">
+      <h2>Controls</h2>
+      <p>Move : WASD</p>
+      <p>Attack : Spacebar</p>
+      <p>Pause : ESC</p>
+      <button onclick="closeControls()">Close</button>
+    </div>
+  </div>
+
   <script>
     function startGame() {
       window.location.href = "game1.html";
     }
 
     function showControls() {
-      alert("조작법");
+      document.getElementById("controlsPopup").style.display = "flex";
+    }
+
+    function closeControls() {
+      document.getElementById("controlsPopup").style.display = "none";
     }
 
     function showRecord() {
