--- a/game1.html
+++ b/game1.html
@@ -4,83 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galaga</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background-color: #000;
-    }
-
-    .player {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background-color: #fff;
-      top: 90%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .bullet {
-      position: absolute;
-      width: 10px;
-      height: 20px;
-      background-color: #f00;
-    }
-
-    .enemy {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background-color: #0f0;
-      top: 0;
-    }
-
-    .enemy-bullet {
-      position: absolute;
-      width: 10px;
-      height: 20px;
-      background-color: #ff0;
-    }
-
-    .pause-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(121, 103, 103, 0.7);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-family: Arial, sans-serif;
-      font-size: 2em;
-      z-index: 100;
-    }
-
-    .pause-menu {
-      text-align: center;
-    }
-
-    .pause-menu button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 1em;
-      cursor: pointer;
-      background-color: #333;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .pause-menu button:hover {
-      background-color: #d6caca;
-    }
-  </style>
+  <link rel="stylesheet" href="game.css">
 </head>
 <body>
 
@@ -92,136 +16,8 @@
       <button onclick="exitGame()">Exit</button>
     </div>
   </div>
-
-  <script>
-    const player = document.getElementById("player");
-    const pauseOverlay = document.getElementById("pauseOverlay");
-    const moveDistance = 4;
-    const keys = {};
-    let isPaused = false;
-    let enemies = [];
-
-    // 키 이벤트 리스너 추가
-    document.addEventListener("keydown", (event) => {
-      if (event.key === "Escape") {
-        togglePause();
-      } else {
-        keys[event.key.toLowerCase()] = true;
-        if (!isPaused && event.key === " ") {
-          shootBullet();
-        }
-      }
-    });
-
-    document.addEventListener("keyup", (event) => {
-      keys[event.key.toLowerCase()] = false;
-    });
-
-    function updatePosition() {
-      if (isPaused) return;
-
-      const playerRect = player.getBoundingClientRect();
-
-      if (keys["w"] && playerRect.top > 0) {
-        player.style.top = `${player.offsetTop - moveDistance}px`;
-      }
-      if (keys["a"] && playerRect.left > 0) {
-        player.style.left = `${player.offsetLeft - moveDistance}px`;
-      }
-      if (keys["s"] && playerRect.bottom < window.innerHeight) {
-        player.style.top = `${player.offsetTop + moveDistance}px`;
-      }
-      if (keys["d"] && playerRect.right < window.innerWidth) {
-        player.style.left = `${player.offsetLeft + moveDistance}px`;
-      }
-    }
-
-    function shootBullet() {
-      if (isPaused) return;
-
-      const bullet = document.createElement("div");
-      bullet.classList.add("bullet");
-
-      bullet.style.left = `${player.offsetLeft + (player.offsetWidth / 2) - 27}px`;
-      bullet.style.top = `${player.offsetTop - 20}px`;
-
-      document.body.appendChild(bullet);
-
-      function moveBullet() {
-        if (isPaused) return;
-
-        const bulletRect = bullet.getBoundingClientRect();
-
-        if (bulletRect.bottom < 0) {
-          bullet.remove();
-          clearInterval(bulletInterval);
-        } else {
-          bullet.style.top = `${bullet.offsetTop - 10}px`;
-        }
-      }
-
-      const bulletInterval = setInterval(moveBullet, 10);
-    }
-
-    function createEnemy() {
-      if (isPaused) return;
-
-      if (Math.random() > 0.3) return;
-
-      const enemy = document.createElement("div");
-      enemy.classList.add("enemy");
-      enemy.style.left = `${Math.random() * (window.innerWidth - 50)}px`;
-
-      document.body.appendChild(enemy);
-      enemies.push(enemy);
-
-      setInterval(() => enemyShoot(enemy), 500); // 0.5초마다 발사체 발사
-    }
-
-    function enemyShoot(enemy) {
-      if (isPaused || !enemy.parentNode) return;
-
-      const enemyBullet = document.createElement("div");
-      enemyBullet.classList.add("enemy-bullet");
-
-      enemyBullet.style.left = `${enemy.offsetLeft + (enemy.offsetWidth / 2) - 5}px`;
-      enemyBullet.style.top = `${enemy.offsetTop + enemy.offsetHeight}px`;
-
-      document.body.appendChild(enemyBullet);
-
-      function moveEnemyBullet() {
-        if (isPaused) return;
-
-        const bulletRect = enemyBullet.getBoundingClientRect();
-
-        if (bulletRect.top > window.innerHeight) {
-          enemyBullet.remove();
-          clearInterval(bulletInterval);
-        } else {
-          enemyBullet.style.top = `${enemyBullet.offsetTop + 5}px`;
-        }
-      }
-
-      const bulletInterval = setInterval(moveEnemyBullet, 20);
-    }
-
-    function togglePause() {
-      isPaused = !isPaused;
-      pauseOverlay.style.display = isPaused ? "flex" : "none";
-    }
-
-    function resumeGame() {
-      isPaused = false;
-      pauseOverlay.style.display = "none";
-    }
-
-    function exitGame() {
-      window.location.href = "index.html";
-    }
-
-    setInterval(updatePosition, 10);
-    setInterval(createEnemy, 2000); // 2초마다 적 생성
-  </script>
+  <script src = "player.js"></script>
+  <script src = "enmy.js"></script>
 
 </body>
 </html>
