--- a/game1.html
+++ b/game1.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="game.css">
 </head>
 <body>
-
+  <div class="health-container" id="healthContainer"></div>
   <div class="player" id="player"></div>
   <div class="pause-overlay" id="pauseOverlay">
     <div class="pause-menu">
@@ -16,8 +16,16 @@
       <button onclick="exitGame()">Exit</button>
     </div>
   </div>
+  <div class="game-over-overlay" id="gameOverOverlay">
+    <div class="game-over-menu">
+      <div>Game Over</div>
+      <button onclick="restartGame()">Restart</button>
+      <button onclick="exitGame()">Main Menu</button>
+    </div>
+  </div>  
   <script src = "player.js"></script>
-  <script src = "enmy.js"></script>
+  <script src = "enemy.js"></script>
+  <script src = "game1.js"></script>
 
 </body>
 </html>
