장애물 추가, 적과 장애물 css 구조 변경

--- a/game1.html
+++ b/game1.html
@@ -22,7 +22,8 @@
       <button onclick="restartGame()">Restart</button>
       <button onclick="exitGame()">Main Menu</button>
     </div>
-  </div>  
+  </div> 
+  <script src = "obstacle.js"></script> 
   <script src = "enemy.js"></script>
   <script src = "game1.js"></script>
   <script src = "player.js"></script>
