--- a/game1.html
+++ b/game1.html
@@ -9,6 +9,7 @@
 <body>
   <div class="health-container" id="healthContainer"></div>
   <div class="player" id="player"></div>
+  <div class="score-container" id="scoreContainer">Score: 0</div>
   <div class="pause-overlay" id="pauseOverlay">
     <div class="pause-menu">
       <div>Pause</div>
@@ -23,8 +24,8 @@
       <button onclick="exitGame()">Main Menu</button>
     </div>
   </div> 
-  <script src = "obstacle.js"></script> 
   <script src = "enemy.js"></script>
+  <script src = "obstacle.js"></script> 
   <script src = "game1.js"></script>
   <script src = "player.js"></script>
 
