스테이지 추가 및 난이도 조절, 게임 시작 시 스테이지 선택 가능

--- a/game3.html
+++ b/game3.html
@@ -24,27 +24,17 @@
       <button onclick="exitGame()">Main Menu</button>
     </div>
   </div> 
-  <div class="score-overlay" id="scoreOverlay">
+  <div class="score-overlay" id="scoreOverlay"">
     <div class="score-menu">
       <div>Congratulations! New High Score!</div>
       <div>Your Score: <span id="finalScoreDisplay"></span></div>
       <input type="text" id="playerIDInput" placeholder="Enter your ID" />
       <button onclick="saveScoreToLocalStorage()">Save</button>
     </div>
-  </div>
-  <div class="game-clear-overlay" id="gameClearOverlay">
-    <div class="game-clear-menu">
-      <div>Stage Clear!</div>
-      <div id="scoreInputSection" style="display: none;">
-        <input type="text" id="playerIDInputClear" placeholder="Enter your ID" />
-      </div>
-      <button onclick="goToMain()">Go to Main</button>
-      <button onclick="nextStage()">Next Stage</button>
-    </div>
-  </div>    
+  </div>  
   <script src = "enemy.js"></script>
   <script src = "obstacle.js"></script> 
-  <script src = "game1.js"></script>
+  <script src = "game3.js"></script>
   <script src = "player.js"></script>
 
   
