--- a/game2.html
+++ b/game2.html
@@ -42,6 +42,7 @@
       <button onclick="nextStage()">Next Stage</button>
     </div>
   </div>    
+  <script src = "id.js"></script>
   <script src = "enemy.js"></script>
   <script src = "obstacle.js"></script> 
   <script src = "game2.js"></script>
