--- a/game3.html
+++ b/game3.html
@@ -32,6 +32,7 @@
       <button onclick="saveScoreToLocalStorage()">Save</button>
     </div>
   </div>  
+  <script src = "id.js"></script>
   <script src = "enemy.js"></script>
   <script src = "obstacle.js"></script> 
   <script src = "game3.js"></script>
